Add accessibility features

--- a/index.html
+++ b/index.html
@@ -32,27 +32,27 @@
           <fieldset class="form_fieldset">
             <div class="form_field">
               <input type="radio" name="rating" value="1" id="1" class="form_input">
-              <label class="form_label" for="1">1</label>
+              <label class="form_label" for="1" aria-label="Rate us 1 out of 5">1</label>
             </div>
             <div class="form_field">
               <input type="radio" name="rating" value="2" id="2" class="form_input">
-              <label class="form_label" for="2">2</label>
+              <label class="form_label" for="2" aria-label="Rate us 2 out of 5">2</label>
             </div>
             <div class="form_field">
               <input type="radio" name="rating" value="3" id="3" class="form_input">
-              <label class="form_label" for="3">3</label>
+              <label class="form_label" for="3" aria-label="Rate us 3 out of 5">3</label>
             </div>
             <div class="form_field">
-              <input type="radio" name="rating" value="4" id="5" class="form_input">
-              <label class="form_label" for="4">4</label> 
+              <input type="radio" name="rating" value="4" id="4" class="form_input">
+              <label class="form_label" for="4" aria-label="Rate us 4 out of 5">4</label> 
             </div>
             <div class="form_field">
-              <input type="radio" name="rating" value="5" id="6" class="form_input">
-              <label class="form_label" for="5">5</label>
+              <input type="radio" name="rating" value="5" id="5" class="form_input">
+              <label class="form_label" for="5" aria-label="Rate us 5 out of 5">5</label>
             </div>
           </fieldset>
       
-          <button type="submit" class="form_button">Submit</button>
+          <button type="submit" class="form_button" aria-label="Submit your rating">Submit</button>
         </form>
       </div>
     </article>
