--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Rating state start -->
     <article class="card" id="card-js">
       <div class="card_img">
-        <img src="./images/icon-star.svg" alt="Star icon" class="icon">
+        <img src="./images/icon-star.svg" alt="" class="icon">
       </div>
 
       <div class="card_content">
@@ -59,19 +59,21 @@
     <!-- Rating state end -->
 
     <!-- Thank you state start -->
-    <article class="card card--thanks is-hidden" id="thanks-js">
-      <img src="./images/illustration-thank-you.svg" alt="An illustration of a phone with articles and popups" class="card_img--thanks">
-      <p class="message">You selected <span id="rating-js"></span> out of 5</p>
+      <article class="card card--thanks is-hidden" id="thanks-js" aria-live="polite" aria-atomic="true"></article>
+    <!-- Thank you state end -->
+
+    <!-- Thank you template start -->
+     <template id="thanks-template">
+      <img src="./images/illustration-thank-you.svg" alt="" class="card_img--thanks">
+      <p class="message"></p>
 
       <div class="card_content">
-        <h2 class="title">Thank you!</h2>
-        <p>
-          We appreciate you taking the time to give a rating. 
-          If you ever need more support, don’t hesitate to get in touch!
-        </p>
+        <h2 class="title"></h2>
+        <p class="description"></p>
       </div>
-    </article>
-  <!-- Thank you state end -->
+     </template>
+    <!-- Thank you template end -->
+  
   </main>
 </body>
 </html>
